# mbn

./: Cargo.toml
mbn_c/: CMakeLists.txt  Cargo.toml  build.rs  build.sh  cbindgen.toml
mbn_c/src/: decode.rs  encode.rs  lib.rs  records.rs
mbn_c/tests/: test_decode_c.cpp  test_encode_c.cpp
